# Learning-AI

Vector-Database-Indexing-lab/: main.py  pyproject.toml
Vector-Database-Indexing-lab/notebooks/: 00_Introduction_to_Vector_Databases.ipynb  01_Embeddings.ipynb  02_Distance_Metrics.ipynb  03_KNN_Exact_Search.ipynb  04_Approximate_Nearest_Neighbor_(ANN).ipynb  04_Flat_Index.ipynb  05_Clustering_for_Vector_Search.ipynb  06_Clustering_for_Vector_Search.ipynb  07_IVF_(Inverted_File_Index).ipynb  08_Curse_of_Dimensionality.ipynb  09_KDTree.ipynb  10_Locality_Sensitive_Hashing_(LSH).ipynb  11_Product_Quantization_(PQ).ipynb  12_IVFPQ_(Inverted_File_with_Product_Quantization).ipynb  13_HNSW_(Hierarchical_Navigable_Small_World).ipynb  14_FAISS_Hands_On.ipynb  15_Qdrant_Hands_On.ipynb  16_Hybrid_Search.ipynb  17_Retrieval_Evaluation.ipynb  18_Production_RAG_Pipeline.ipynb
