[project]
name = "vector-database-indexing-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "httpx>=0.28.1",
    "huggingface-hub>=1.22.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "transformers>=5.13.0",
]
